--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -12,7 +12,7 @@
   <!-- / HEADER -->
 
   <div class="content p-24" *ngIf="!onLoad">
-    <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
+    <<<<<<< HEAD <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
       style="background-color: #585858;" fxLayoutAlign="end center" class="p-16 export">
       <a #downloadLink></a>
       <button mat-raised-button type="button" color="primary">
@@ -24,87 +24,93 @@
       <button (click)="export()" mat-raised-button type="button" class="is-danger">
         <mat-icon>arrow_upward</mat-icon> Export XLS
       </button>
-    </div>
-    <div class="table-wrapper">
-      <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Retailer</h2>
-        <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
-          <mat-icon>search</mat-icon>
-          <mat-form-field class="is-light tab-search">
-            <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
-          </mat-form-field>
-        </div>
-      </div>
-      <form [formGroup]="formFilter" autoComplete="off">
-        <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+      =======
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
+        style="background-color: #585858">
 
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="National" formControlName="national">
-              <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Zone" formControlName="zone"
-              (selectionChange)="getAudienceArea('region', formFilter.get('zone').value)">
-              <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name === 'all' ? 'Semua
+        >>>>>>> 8d76b55... integrasi Service Product
+      </div>
+      <div class="table-wrapper">
+        <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+          <h2 class="pl-8">Daftar Retailer</h2>
+          <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+            <mat-icon>search</mat-icon>
+            <mat-form-field class="is-light tab-search">
+              <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+            </mat-form-field>
+          </div>
+        </div>
+        <form [formGroup]="formFilter" autoComplete="off">
+          <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px"
+            fxLayoutGap.lt-md="0px">
+
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="National" formControlName="national">
+                <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Zone" formControlName="zone"
+                (selectionChange)="getAudienceArea('region', formFilter.get('zone').value)">
+                <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Zona' :
                 item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Regional" formControlName="region"
-              (selectionChange)="getAudienceArea('area', formFilter.get('region').value)">
-              <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name === 'all' ? 'Semua
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Regional" formControlName="region"
+                (selectionChange)="getAudienceArea('area', formFilter.get('region').value)">
+                <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Regional'
                 :
                 item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Area" formControlName="area"
-              (selectionChange)="getAudienceArea('salespoint', formFilter.get('area').value)">
-              <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name === 'all' ? 'Semua
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Area" formControlName="area"
+                (selectionChange)="getAudienceArea('salespoint', formFilter.get('area').value)">
+                <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Area'
                 :
                 item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Salespoint" formControlName="salespoint"
-              (selectionChange)="getAudienceArea('district', formFilter.get('salespoint').value)">
-              <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name === 'all' ?
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Salespoint" formControlName="salespoint"
+                (selectionChange)="getAudienceArea('district', formFilter.get('salespoint').value)">
+                <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name === 'all' ?
                 'Semua
                 Salespoint'
                 :
                 item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="District" formControlName="district"
-              (selectionChange)="getAudienceArea('territory', formFilter.get('district').value)">
-              <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name === 'all' ? 'Semua
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="District" formControlName="district"
+                (selectionChange)="getAudienceArea('territory', formFilter.get('district').value)">
+                <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name === 'all' ? 'Semua
                 District'
                 :
                 item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Territory" formControlName="territory">
-              <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name === 'all' ? 'Semua
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Territory" formControlName="territory">
+                <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name === 'all' ? 'Semua
                 Territori'
                 :
                 item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-      </form>
-      <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
-        [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-        [rowHeight]="'auto'" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
-        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
-        (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)">
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </form>
+        <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
+          [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
+          [rowHeight]="'auto'" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
+          [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+          (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)">
 
-        <!-- <ngx-datatable-column [width]="48" [canAutoResize]="false" [sortable]="true">
+          <!-- <ngx-datatable-column [width]="48" [canAutoResize]="false" [sortable]="true">
             <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
               let-selectFn="selectFn">
               <mat-checkbox [checked]="allRowsSelected"></mat-checkbox>
@@ -115,45 +121,45 @@
             </ng-template>
           </ngx-datatable-column> -->
 
-        <ngx-datatable-column name="Nama Toko" prop="name">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <a class="direct-edit" (click)="directDetail(row)">{{row.name}} </a>
-          </ng-template>
-        </ngx-datatable-column>
+          <ngx-datatable-column name="Nama Toko" prop="name">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+              <a class="direct-edit" (click)="directDetail(row)">{{row.name}} </a>
+            </ng-template>
+          </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="100" name="Kode Agen" prop="code" summary-template="activeCell">
-        </ngx-datatable-column>
-        <ngx-datatable-column name="Nama Pemilik" prop="owner">
-          <!-- <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+          <ngx-datatable-column [width]="100" name="Kode Agen" prop="code" summary-template="activeCell">
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Nama Pemilik" prop="owner">
+            <!-- <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <a class="direct-edit" (click)="directEdit(row)">{{row.owner}} </a>
           </ng-template> -->
-        </ngx-datatable-column>
+          </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="100" name="Classification" prop="classification" summary-template="activeCell">
-        </ngx-datatable-column>
+          <ngx-datatable-column [width]="100" name="Classification" prop="classification" summary-template="activeCell">
+          </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="100" name="Kode WS" prop="wholesaler_code" summary-template="activeCell"
-          [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_code || '-'}}
-          </ng-template>
-        </ngx-datatable-column>
-        <ngx-datatable-column name="Nama WS" prop="wholesaler_name" summary-template="activeCell" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_name || '-'}}
-          </ng-template>
-        </ngx-datatable-column>
+          <ngx-datatable-column [width]="100" name="Kode WS" prop="wholesaler_code" summary-template="activeCell"
+            [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_code || '-'}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Nama WS" prop="wholesaler_name" summary-template="activeCell" [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_name || '-'}}
+            </ng-template>
+          </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="120" name="Status" prop="status">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <div class="name-container">
-              <p class="status text-truncate h6 p-4 status-order"
-                [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{ row.status_indo.toUpperCase() }}
-              </p>
-            </div>
-          </ng-template>
-        </ngx-datatable-column>
+          <ngx-datatable-column [width]="120" name="Status" prop="status">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+              <div class="name-container">
+                <p class="status text-truncate h6 p-4 status-order"
+                  [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
+                  {{ row.status_indo.toUpperCase() }}
+                </p>
+              </div>
+            </ng-template>
+          </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="120" name="Akses Kasir" prop="cashier">
+          <!-- <ngx-datatable-column [width]="120" name="Akses Kasir" prop="cashier">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p class="status text-truncate h6 p-4 status-order"
@@ -163,14 +169,14 @@
             </div>
           </ng-template>
         </ngx-datatable-column>
-        <!-- <ngx-datatable-column name="Terkahir Masuk" prop="last_login">
+        <<ngx-datatable-column name="Terkahir Masuk" prop="last_login">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.last_login | date:'dd/MM/yyyy HH:mm'}}
             </ng-template>
           </ngx-datatable-column> -->
 
-        <!-- disable delete ws -->
-        <!-- <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+          <!-- disable delete ws -->
+          <!-- <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
               <div class="button-row pl-8">
                 <button mat-icon-button color="primary" (click)="deleteWholesaler(row.id)">
@@ -179,20 +185,20 @@
               </div>
             </ng-template>
           </ngx-datatable-column> -->
-        <ngx-datatable-column [width]="60" name="Tindakan" headerClass="textright" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
-            style="justify-content: center !important">
-            <div class="button-row pl-8">
-              <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
-                <mat-icon class="secondary-text">assignment</mat-icon>
-              </button>
-              <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
-                <mat-icon class="secondary-text">edit</mat-icon>
-              </button>
-            </div>
-          </ng-template>
-        </ngx-datatable-column>
-      </ngx-datatable>
-    </div>
+          <ngx-datatable-column [width]="60" name="Tindakan" headerClass="textright" [sortable]="false">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+              style="justify-content: center !important">
+              <div class="button-row pl-8">
+                <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
+                  <mat-icon class="secondary-text">assignment</mat-icon>
+                </button>
+                <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+                  <mat-icon class="secondary-text">edit</mat-icon>
+                </button>
+              </div>
+            </ng-template>
+          </ngx-datatable-column>
+        </ngx-datatable>
+      </div>
   </div>
 </div>
