--- a/src/app/pages/popup-notification/index/popup-notification-index.component.html
+++ b/src/app/pages/popup-notification/index/popup-notification-index.component.html
@@ -2,7 +2,8 @@
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Popup Notifikasi'">
     <div class="button-row" fxLayout="row">
-      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/notifications', 'popup-notification', 'create']">
+      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
+        [routerLink]="['/notifications', 'popup-notification', 'create']">
         <mat-icon>add</mat-icon>BUAT
       </button>
     </div>
@@ -25,6 +26,13 @@
         [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
         (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)">
 
+        <ngx-datatable-column name="ID" prop="id">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <!-- <span class="row-name" (click)="directEdit(row)">{{row.id}}</span> -->
+            {{row.id}}
+          </ng-template>
+        </ngx-datatable-column>
+
         <ngx-datatable-column name="Judul Popup Notifikasi" prop="title">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <!-- <span class="row-name" (click)="directEdit(row)">{{row.title}}</span> -->
@@ -33,7 +41,8 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Grup Pengguna" prop="type">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.type | toCapitalize}}</ng-template>
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.type | toCapitalize}}
+          </ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column name="Halaman Tujuan" prop="static_page_slug"></ngx-datatable-column>
 
@@ -52,15 +61,19 @@
           </ng-template>
         </ngx-datatable-column> -->
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+            style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
-              <button mat-icon-button *ngIf="!permission?.ubah" color="" matTooltip="Detail Popup Notifikasi" [routerLink]="['/notifications', 'popup-notification', 'detail', row.id]">
+              <button mat-icon-button *ngIf="!permission?.ubah" color="" matTooltip="Detail Popup Notifikasi"
+                [routerLink]="['/notifications', 'popup-notification', 'detail', row.id]">
                 <mat-icon class="secondary-text">assignment</mat-icon>
               </button>
-              <button mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Ubah Popup Notifikasi" [routerLink]="['/notifications', 'popup-notification', 'edit', row.id]">
+              <button mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Ubah Popup Notifikasi"
+                [routerLink]="['/notifications', 'popup-notification', 'edit', row.id]">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary" matTooltip="Hapus Popup Notifikasi" (click)="deletePopup(row.id)" [ngStyle]="{'cursor': !permission?.hapus ? 'no-drop' : ''}" [disabled]="!permission?.hapus">
+              <button mat-icon-button color="primary" matTooltip="Hapus Popup Notifikasi" (click)="deletePopup(row.id)"
+                [ngStyle]="{'cursor': !permission?.hapus ? 'no-drop' : ''}" [disabled]="!permission?.hapus">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
