CDE-1071 Flagging Active Cashier

--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -12,9 +12,18 @@
   <!-- / HEADER -->
 
   <div class="content p-24" *ngIf="!onLoad">
-    <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
-      style="background-color: #585858">
-
+    <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
+      style="background-color: #585858;" fxLayoutAlign="end center" class="p-16 export">
+      <a #downloadLink></a>
+      <button mat-raised-button type="button" color="primary">
+        Kelola Akses Kasir
+      </button>
+      <button mat-raised-button type="button" class="is-danger" (click)="import()">
+        <mat-icon>arrow_downward</mat-icon> Import XLS
+      </button>
+      <button (click)="export()" mat-raised-button type="button" class="is-danger">
+        <mat-icon>arrow_upward</mat-icon> Export XLS
+      </button>
     </div>
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
@@ -144,7 +153,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="120" name="Akses Cashier" prop="cashier">
+        <ngx-datatable-column [width]="120" name="Akses Kasir" prop="cashier">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p class="status text-truncate h6 p-4 status-order"
