Targeted Audience Popup Notification - 1

--- a/src/app/pages/popup-notification/create/popup-notification-create.component.scss
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.scss
@@ -129,3 +129,10 @@
     color: rgba(0, 0, 0, 0.54) !important;
   }
 }
+
+:host {
+  .export {
+    background-color: #3a3a3a !important;
+  }
+}
+
